<resources>
    <string name="app_name">Calculator</string>
    <string name="textdelete">C</string>
    <string name="textdivide">/</string>
    <string name="textmultiply">X</string>
    <string name="text7">7</string>
    <string name="text8">8</string>
    <string name="text9">9</string>
    <string name="textsub">-</string>
    <string name="text4">4</string>
    <string name="text5">5</string>
    <string name="text6">6</string>
    <string name="textplus">+</string>
    <string name="text1">1</string>
    <string name="text2">2</string>
    <string name="text3">3</string>
    <string name="textprime">Prm</string>
    <string name="text0">0</string>
    <string name="textdot">.</string>
    <string name="textfactorial">!</string>
    <string name="textequals">=</string>
</resources>
